minor code cleanup

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -223,6 +223,8 @@
     }
    ],
    "source": [
+    "# regression\n",
+    "\n",
     "yStiff, xStiff, axStiff = plt.hist(stiffBarPulls, bins=250, histtype='step', normed=1, cumulative=True, color='orange', label='Stiff Bar')\n",
     "yDL, xDL, axDL = plt.hist(DLBarPulls, bins=250, histtype='step', normed=1, cumulative=True, color='blue', label='Deadlift Bar')\n",
     "\n",
@@ -328,6 +330,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# making sample table\n",
+    "\n",
     "np.arange(165, 405, 10)\n",
     "\n",
     "sample = pd.DataFrame(np.arange(170, 405, 10), columns=['Stiff Bar Weight'])\n",
